# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-15 20:45:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-76

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-76


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 20:34:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-75

    Summary:
      Mroe EOF corrections
    Revision:
      missingh--head--0.7--patch-75


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 20:29:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-74

    Summary:
      Fixed EOF handling in HVIO code
    Revision:
      missingh--head--0.7--patch-74


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 20:12:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-73

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-73


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:42:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-72

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-72


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:23:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-71

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-71


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:14:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-70

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-70


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:11:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-69

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-69


    modified files:
     ChangeLog libsrc/MissingH/HVIO.hs


2004-12-15 19:05:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-68

    Summary: